DECLARE
    PROCEDURE exec_ddl(p_sql IN CLOB) IS
    BEGIN
        EXECUTE IMMEDIATE p_sql;
    EXCEPTION
        WHEN OTHERS THEN
            IF SQLCODE = -955 THEN
                NULL;
            ELSE
                RAISE;
            END IF;
    END;
BEGIN
    exec_ddl('CREATE TABLE CMH.DEPARTMENTS (
        ID NUMBER NOT NULL,
        NAME VARCHAR2(100) NOT NULL,
        DESCRIPTION VARCHAR2(255),
        LOCATION VARCHAR2(100),
        HEAD_STAFF_ID NUMBER,
        DEPT_CODE VARCHAR2(30),
        IS_ACTIVE CHAR(1) NOT NULL,
        SORT_ORDER NUMBER NOT NULL,
        CREATED_AT DATE NOT NULL,
        UPDATED_AT DATE,
        BUILDING_NO VARCHAR2(50),
        FLOOR_NO VARCHAR2(10),
        ROOM_NO VARCHAR2(20),
        EXTENSION VARCHAR2(20)
    )');

    exec_ddl('CREATE TABLE CMH.POSITIONS (
        ID NUMBER NOT NULL,
        DOMAIN VARCHAR2(50),
        TITLE VARCHAR2(100),
        DESCRIPTION VARCHAR2(255),
        POSITION_CODE VARCHAR2(30),
        IS_ACTIVE CHAR(1) NOT NULL,
        SORT_ORDER NUMBER NOT NULL,
        CREATED_AT DATE NOT NULL,
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.STAFF_STATUS_CODES (
        CODE VARCHAR2(20) NOT NULL,
        LABEL VARCHAR2(50) NOT NULL,
        SORT_ORDER NUMBER NOT NULL,
        IS_ACTIVE CHAR(1) NOT NULL,
        CREATED_AT DATE NOT NULL,
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.STAFF (
        ID NUMBER NOT NULL,
        USERNAME VARCHAR2(50) NOT NULL,
        PASSWORD_HASH VARCHAR2(64),
        STATUS VARCHAR2(20),
        DOMAIN_ROLE VARCHAR2(50),
        FULL_NAME VARCHAR2(100),
        OFFICE_LOCATION VARCHAR2(255),
        PHOTO_KEY VARCHAR2(255),
        BIO CLOB,
        PHONE VARCHAR2(20),
        DEPT_ID NUMBER,
        POSITION_ID NUMBER,
        STATUS_CODE VARCHAR2(20),
        CREATED_AT DATE NOT NULL,
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.STAFF_CREDENTIAL (
        ID NUMBER(10) NOT NULL,
        STAFF_ID NUMBER(10) NOT NULL,
        CRED_TYPE VARCHAR2(10) NOT NULL,
        NAME VARCHAR2(100) NOT NULL,
        CRED_NUMBER VARCHAR2(50),
        ISSUER VARCHAR2(100),
        ISSUED_AT DATE,
        EXPIRES_AT DATE,
        STATUS VARCHAR2(20) NOT NULL,
        EVIDENCE_KEY VARCHAR2(255),
        CREATED_AT DATE,
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.STAFF_HISTORY (
        ID NUMBER NOT NULL,
        STAFF_ID NUMBER NOT NULL,
        EVENT_TYPE VARCHAR2(30),
        FIELD_NAME VARCHAR2(50),
        OLD_VALUE VARCHAR2(1000),
        NEW_VALUE VARCHAR2(1000),
        REASON VARCHAR2(500),
        CHANGED_BY VARCHAR2(50),
        CHANGED_AT DATE NOT NULL
    )');

    exec_ddl('CREATE TABLE CMH.STAFF_CHANGE_REQUEST (
        ID NUMBER NOT NULL,
        STAFF_ID NUMBER NOT NULL,
        REQUEST_TYPE VARCHAR2(30) NOT NULL,
        REQUEST_PAYLOAD CLOB,
        REASON VARCHAR2(500),
        STATUS VARCHAR2(20) NOT NULL,
        REQUESTED_BY VARCHAR2(50) NOT NULL,
        REQUESTED_AT DATE NOT NULL,
        REVIEWED_BY VARCHAR2(50),
        REVIEWED_AT DATE,
        REVIEW_COMMENT VARCHAR2(500)
    )');

    exec_ddl('CREATE TABLE CMH.STAFF_AUDIT_LOG (
        ID NUMBER NOT NULL,
        ACTION_TYPE VARCHAR2(50) NOT NULL,
        TARGET_TYPE VARCHAR2(50),
        TARGET_ID VARCHAR2(50),
        ACTOR VARCHAR2(50),
        ACTOR_ROLE VARCHAR2(50),
        REASON VARCHAR2(500),
        OLD_VALUE VARCHAR2(2000),
        NEW_VALUE VARCHAR2(2000),
        IP_ADDRESS VARCHAR2(64),
        USER_AGENT VARCHAR2(500),
        CREATED_AT DATE NOT NULL
    )');

    exec_ddl('CREATE TABLE CMH.STAFF_BOARD_POST (
        ID NUMBER NOT NULL,
        CATEGORY VARCHAR2(20) NOT NULL,
        POST_TYPE VARCHAR2(20) NOT NULL,
        TITLE VARCHAR2(200) NOT NULL,
        CONTENT VARCHAR2(4000),
        EVENT_DATE VARCHAR2(20),
        LOCATION VARCHAR2(200),
        SUBJECT_NAME VARCHAR2(100),
        DEPARTMENT_NAME VARCHAR2(100),
        AUTHOR_ID VARCHAR2(100) NOT NULL,
        AUTHOR_NAME VARCHAR2(100) NOT NULL,
        DELETE_PIN VARCHAR2(4) NOT NULL,
        IS_DELETED CHAR(1) DEFAULT ''N'',
        CREATED_AT DATE NOT NULL,
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.STAFF_COMMON_DOC (
        ID NUMBER NOT NULL,
        CATEGORY VARCHAR2(30) NOT NULL,
        TITLE VARCHAR2(200) NOT NULL,
        CONTENT VARCHAR2(4000),
        VERSION_LABEL VARCHAR2(20) NOT NULL,
        OWNER_NAME VARCHAR2(100) NOT NULL,
        SENDER_DEPT_ID NUMBER,
        SENDER_DEPT_NAME VARCHAR2(100),
        RECEIVER_DEPT_ID NUMBER,
        RECEIVER_DEPT_NAME VARCHAR2(100),
        APPROVER_ID VARCHAR2(100),
        APPROVER_NAME VARCHAR2(100),
        APPROVAL_STATUS VARCHAR2(20),
        REJECTION_REASON VARCHAR2(500),
        ATTACH_FILE_NAME VARCHAR2(200),
        ATTACH_MIME_TYPE VARCHAR2(100),
        ATTACH_BASE64 CLOB,
        AUTHOR_ID VARCHAR2(100) NOT NULL,
        AUTHOR_NAME VARCHAR2(100) NOT NULL,
        IS_DELETED CHAR(1) DEFAULT ''N'',
        CREATED_AT DATE NOT NULL,
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.STAFF_COMMON_DOC_LINE (
        ID NUMBER NOT NULL,
        DOC_ID NUMBER NOT NULL,
        LINE_ORDER NUMBER NOT NULL,
        LINE_TYPE VARCHAR2(20) NOT NULL,
        APPROVER_ID VARCHAR2(100) NOT NULL,
        APPROVER_NAME VARCHAR2(100) NOT NULL,
        ACTION_STATUS VARCHAR2(20) NOT NULL,
        ACTION_COMMENT VARCHAR2(500),
        ACTED_AT DATE,
        CREATED_AT DATE NOT NULL
    )');

    exec_ddl('CREATE TABLE CMH.VISIT_REG (
        ID NUMBER NOT NULL,
        VISIT_NO VARCHAR2(30),
        PATIENT_ID NUMBER NOT NULL,
        PATIENT_NO VARCHAR2(30),
        PATIENT_NAME VARCHAR2(100),
        PATIENT_PHONE VARCHAR2(20),
        VISIT_TYPE VARCHAR2(30) NOT NULL,
        STATUS VARCHAR2(30) NOT NULL,
        DEPT_CODE VARCHAR2(50) NOT NULL,
        DOCTOR_ID VARCHAR2(50),
        PRIORITY_YN NUMBER(1),
        QUEUE_NO NUMBER,
        CALLED_AT DATE,
        STARTED_AT DATE,
        FINISHED_AT DATE,
        MEMO VARCHAR2(1000),
        CANCELLED_AT DATE,
        CANCEL_REASON_CODE VARCHAR2(50),
        CANCEL_MEMO VARCHAR2(1000),
        CREATED_BY VARCHAR2(50),
        UPDATED_BY VARCHAR2(50),
        CREATED_AT DATE NOT NULL,
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.VISIT_HISTORY (
        ID NUMBER NOT NULL,
        VISIT_ID NUMBER NOT NULL,
        EVENT_TYPE VARCHAR2(30),
        FIELD_NAME VARCHAR2(50),
        OLD_VALUE VARCHAR2(1000),
        NEW_VALUE VARCHAR2(1000),
        REASON VARCHAR2(500),
        CHANGED_BY VARCHAR2(50),
        CHANGED_AT DATE NOT NULL
    )');

    exec_ddl('CREATE TABLE CMH.VISIT_RESERVATION (
        VISIT_ID NUMBER NOT NULL,
        RESERVATION_ID VARCHAR2(50),
        SCHEDULED_AT DATE,
        ARRIVAL_AT DATE,
        NOTE VARCHAR2(1000),
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.VISIT_EMERGENCY (
        VISIT_ID NUMBER NOT NULL,
        TRIAGE_LEVEL VARCHAR2(20),
        AMBULANCE_YN NUMBER(1),
        TRAUMA_YN NUMBER(1),
        NOTE VARCHAR2(1000),
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.VISIT_INPATIENT (
        VISIT_ID NUMBER NOT NULL,
        WARD_CODE VARCHAR2(30),
        ROOM_NO VARCHAR2(30),
        BED_NO VARCHAR2(30),
        ADMISSION_AT DATE,
        NOTE VARCHAR2(1000),
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.MEDICAL_ENCOUNTER (
        ID NUMBER NOT NULL,
        VISIT_ID NUMBER NOT NULL,
        PATIENT_ID NUMBER NOT NULL,
        PATIENT_NO VARCHAR2(30),
        PATIENT_NAME VARCHAR2(100),
        DOCTOR_ID VARCHAR2(50),
        DEPT_CODE VARCHAR2(50),
        STATUS VARCHAR2(30) NOT NULL,
        CHIEF_COMPLAINT VARCHAR2(2000),
        ASSESSMENT VARCHAR2(2000),
        PLAN_NOTE VARCHAR2(2000),
        DIAGNOSIS_CODE VARCHAR2(100),
        MEMO VARCHAR2(2000),
        IS_ACTIVE CHAR(1) NOT NULL,
        INACTIVE_REASON_CODE VARCHAR2(50),
        INACTIVE_REASON_MEMO VARCHAR2(1000),
        INACTIVATED_AT DATE,
        CREATED_BY VARCHAR2(50),
        UPDATED_BY VARCHAR2(50),
        CREATED_AT DATE NOT NULL,
        UPDATED_AT DATE
    )');

    exec_ddl('CREATE TABLE CMH.MEDICAL_ENCOUNTER_HISTORY (
        ID NUMBER NOT NULL,
        ENCOUNTER_ID NUMBER NOT NULL,
        EVENT_TYPE VARCHAR2(30),
        FIELD_NAME VARCHAR2(50),
        OLD_VALUE VARCHAR2(2000),
        NEW_VALUE VARCHAR2(2000),
        REASON VARCHAR2(500),
        CHANGED_BY VARCHAR2(50),
        CHANGED_AT DATE NOT NULL
    )');

    exec_ddl('CREATE TABLE CMH.MEDICAL_ENCOUNTER_DIAGNOSIS (
        ID NUMBER NOT NULL,
        ENCOUNTER_ID NUMBER NOT NULL,
        DIAGNOSIS_CODE VARCHAR2(100) NOT NULL,
        DIAGNOSIS_NAME VARCHAR2(300),
        IS_PRIMARY CHAR(1) NOT NULL,
        SORT_ORDER NUMBER NOT NULL,
        CREATED_BY VARCHAR2(50),
        CREATED_AT DATE NOT NULL
    )');

    exec_ddl('CREATE TABLE CMH.MEDICAL_ENCOUNTER_ASSET (
        ID NUMBER NOT NULL,
        ENCOUNTER_ID NUMBER NOT NULL,
        PATIENT_ID NUMBER NOT NULL,
        ASSET_TYPE VARCHAR2(20) NOT NULL,
        TEMPLATE_CODE VARCHAR2(50),
        OBJECT_KEY VARCHAR2(500) NOT NULL,
        CREATED_BY VARCHAR2(50),
        CREATED_AT DATE NOT NULL
    )');

    exec_ddl('CREATE TABLE LHS.MENU (
        ID NUMBER NOT NULL,
        PARENT_ID NUMBER,
        CODE VARCHAR2(50) NOT NULL,
        NAME VARCHAR2(100) NOT NULL,
        PATH VARCHAR2(200),
        ICON VARCHAR2(50),
        SORT_ORDER NUMBER NOT NULL,
        IS_ACTIVE NUMBER(1) NOT NULL,
        CREATED_AT TIMESTAMP(6) NOT NULL,
        UPDATED_AT TIMESTAMP(6) NOT NULL
    )');
END;
/

DECLARE
    PROCEDURE add_constraint_if_missing(p_owner IN VARCHAR2, p_table IN VARCHAR2, p_name IN VARCHAR2, p_ddl IN CLOB) IS
        v_cnt NUMBER;
    BEGIN
        SELECT COUNT(*)
          INTO v_cnt
          FROM ALL_CONSTRAINTS
         WHERE OWNER = UPPER(p_owner)
           AND TABLE_NAME = UPPER(p_table)
           AND CONSTRAINT_NAME = UPPER(p_name);

        IF v_cnt = 0 THEN
            EXECUTE IMMEDIATE p_ddl;
        END IF;
    END;
BEGIN
    add_constraint_if_missing('CMH', 'DEPARTMENTS', 'PK_DEPARTMENTS',
        'ALTER TABLE CMH.DEPARTMENTS ADD CONSTRAINT PK_DEPARTMENTS PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'POSITIONS', 'PK_POSITIONS',
        'ALTER TABLE CMH.POSITIONS ADD CONSTRAINT PK_POSITIONS PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'STAFF_STATUS_CODES', 'PK_STAFF_STAT_CD',
        'ALTER TABLE CMH.STAFF_STATUS_CODES ADD CONSTRAINT PK_STAFF_STAT_CD PRIMARY KEY (CODE)');
    add_constraint_if_missing('CMH', 'STAFF', 'PK_STAFF',
        'ALTER TABLE CMH.STAFF ADD CONSTRAINT PK_STAFF PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'STAFF_CREDENTIAL', 'PK_STAFF_CRED',
        'ALTER TABLE CMH.STAFF_CREDENTIAL ADD CONSTRAINT PK_STAFF_CRED PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'STAFF_HISTORY', 'PK_STAFF_HISTORY',
        'ALTER TABLE CMH.STAFF_HISTORY ADD CONSTRAINT PK_STAFF_HISTORY PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'STAFF_CHANGE_REQUEST', 'PK_STAFF_CHG_REQ',
        'ALTER TABLE CMH.STAFF_CHANGE_REQUEST ADD CONSTRAINT PK_STAFF_CHG_REQ PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'STAFF_AUDIT_LOG', 'PK_STAFF_AUDIT_LOG',
        'ALTER TABLE CMH.STAFF_AUDIT_LOG ADD CONSTRAINT PK_STAFF_AUDIT_LOG PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'STAFF_BOARD_POST', 'PK_STAFF_BOARD_POST',
        'ALTER TABLE CMH.STAFF_BOARD_POST ADD CONSTRAINT PK_STAFF_BOARD_POST PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'STAFF_COMMON_DOC', 'PK_STAFF_COMMON_DOC',
        'ALTER TABLE CMH.STAFF_COMMON_DOC ADD CONSTRAINT PK_STAFF_COMMON_DOC PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'STAFF_COMMON_DOC_LINE', 'PK_STAFF_COMMON_DOC_LINE',
        'ALTER TABLE CMH.STAFF_COMMON_DOC_LINE ADD CONSTRAINT PK_STAFF_COMMON_DOC_LINE PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'VISIT_REG', 'PK_VISIT_REG',
        'ALTER TABLE CMH.VISIT_REG ADD CONSTRAINT PK_VISIT_REG PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'VISIT_HISTORY', 'PK_VISIT_HISTORY',
        'ALTER TABLE CMH.VISIT_HISTORY ADD CONSTRAINT PK_VISIT_HISTORY PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'VISIT_RESERVATION', 'PK_VISIT_RESERVATION',
        'ALTER TABLE CMH.VISIT_RESERVATION ADD CONSTRAINT PK_VISIT_RESERVATION PRIMARY KEY (VISIT_ID)');
    add_constraint_if_missing('CMH', 'VISIT_EMERGENCY', 'PK_VISIT_EMERGENCY',
        'ALTER TABLE CMH.VISIT_EMERGENCY ADD CONSTRAINT PK_VISIT_EMERGENCY PRIMARY KEY (VISIT_ID)');
    add_constraint_if_missing('CMH', 'VISIT_INPATIENT', 'PK_VISIT_INPATIENT',
        'ALTER TABLE CMH.VISIT_INPATIENT ADD CONSTRAINT PK_VISIT_INPATIENT PRIMARY KEY (VISIT_ID)');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER', 'PK_MEDICAL_ENCOUNTER',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER ADD CONSTRAINT PK_MEDICAL_ENCOUNTER PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER_HISTORY', 'PK_MED_ENC_HIS',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER_HISTORY ADD CONSTRAINT PK_MED_ENC_HIS PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER_DIAGNOSIS', 'PK_MED_ENC_DIAG',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER_DIAGNOSIS ADD CONSTRAINT PK_MED_ENC_DIAG PRIMARY KEY (ID)');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER_ASSET', 'PK_MED_ENC_ASSET',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER_ASSET ADD CONSTRAINT PK_MED_ENC_ASSET PRIMARY KEY (ID)');
    add_constraint_if_missing('LHS', 'MENU', 'PK_MENU',
        'ALTER TABLE LHS.MENU ADD CONSTRAINT PK_MENU PRIMARY KEY (ID)');

    add_constraint_if_missing('CMH', 'STAFF', 'FK_STAFF_DEPT',
        'ALTER TABLE CMH.STAFF ADD CONSTRAINT FK_STAFF_DEPT FOREIGN KEY (DEPT_ID) REFERENCES CMH.DEPARTMENTS(ID)');
    add_constraint_if_missing('CMH', 'STAFF', 'FK_STAFF_POS',
        'ALTER TABLE CMH.STAFF ADD CONSTRAINT FK_STAFF_POS FOREIGN KEY (POSITION_ID) REFERENCES CMH.POSITIONS(ID)');
    add_constraint_if_missing('CMH', 'STAFF', 'FK_STAFF_STAT_CD',
        'ALTER TABLE CMH.STAFF ADD CONSTRAINT FK_STAFF_STAT_CD FOREIGN KEY (STATUS_CODE) REFERENCES CMH.STAFF_STATUS_CODES(CODE)');
    add_constraint_if_missing('CMH', 'STAFF_CREDENTIAL', 'FK_STFCRD_STAFF',
        'ALTER TABLE CMH.STAFF_CREDENTIAL ADD CONSTRAINT FK_STFCRD_STAFF FOREIGN KEY (STAFF_ID) REFERENCES CMH.STAFF(ID)');
    add_constraint_if_missing('CMH', 'STAFF_HISTORY', 'FK_STFHIS_STAFF',
        'ALTER TABLE CMH.STAFF_HISTORY ADD CONSTRAINT FK_STFHIS_STAFF FOREIGN KEY (STAFF_ID) REFERENCES CMH.STAFF(ID)');
    add_constraint_if_missing('CMH', 'STAFF_CHANGE_REQUEST', 'FK_STFREQ_STAFF',
        'ALTER TABLE CMH.STAFF_CHANGE_REQUEST ADD CONSTRAINT FK_STFREQ_STAFF FOREIGN KEY (STAFF_ID) REFERENCES CMH.STAFF(ID)');
    add_constraint_if_missing('CMH', 'STAFF_COMMON_DOC_LINE', 'FK_STF_DOC_LINE_DOC',
        'ALTER TABLE CMH.STAFF_COMMON_DOC_LINE ADD CONSTRAINT FK_STF_DOC_LINE_DOC FOREIGN KEY (DOC_ID) REFERENCES CMH.STAFF_COMMON_DOC(ID)');
    add_constraint_if_missing('CMH', 'VISIT_HISTORY', 'FK_VISIT_HIS_VISIT',
        'ALTER TABLE CMH.VISIT_HISTORY ADD CONSTRAINT FK_VISIT_HIS_VISIT FOREIGN KEY (VISIT_ID) REFERENCES CMH.VISIT_REG(ID)');
    add_constraint_if_missing('CMH', 'VISIT_RESERVATION', 'FK_VISIT_RES_VISIT',
        'ALTER TABLE CMH.VISIT_RESERVATION ADD CONSTRAINT FK_VISIT_RES_VISIT FOREIGN KEY (VISIT_ID) REFERENCES CMH.VISIT_REG(ID)');
    add_constraint_if_missing('CMH', 'VISIT_EMERGENCY', 'FK_VISIT_EMG_VISIT',
        'ALTER TABLE CMH.VISIT_EMERGENCY ADD CONSTRAINT FK_VISIT_EMG_VISIT FOREIGN KEY (VISIT_ID) REFERENCES CMH.VISIT_REG(ID)');
    add_constraint_if_missing('CMH', 'VISIT_INPATIENT', 'FK_VISIT_INP_VISIT',
        'ALTER TABLE CMH.VISIT_INPATIENT ADD CONSTRAINT FK_VISIT_INP_VISIT FOREIGN KEY (VISIT_ID) REFERENCES CMH.VISIT_REG(ID)');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER', 'FK_MED_ENC_VISIT',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER ADD CONSTRAINT FK_MED_ENC_VISIT FOREIGN KEY (VISIT_ID) REFERENCES CMH.VISIT_REG(ID)');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER_HISTORY', 'FK_MED_ENC_HIS_ENC',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER_HISTORY ADD CONSTRAINT FK_MED_ENC_HIS_ENC FOREIGN KEY (ENCOUNTER_ID) REFERENCES CMH.MEDICAL_ENCOUNTER(ID)');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER_DIAGNOSIS', 'FK_MED_ENC_DIAG_ENC',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER_DIAGNOSIS ADD CONSTRAINT FK_MED_ENC_DIAG_ENC FOREIGN KEY (ENCOUNTER_ID) REFERENCES CMH.MEDICAL_ENCOUNTER(ID)');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER_ASSET', 'FK_MED_ENC_AST_ENC',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER_ASSET ADD CONSTRAINT FK_MED_ENC_AST_ENC FOREIGN KEY (ENCOUNTER_ID) REFERENCES CMH.MEDICAL_ENCOUNTER(ID)');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER_ASSET', 'FK_MED_ENC_AST_PAT',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER_ASSET ADD CONSTRAINT FK_MED_ENC_AST_PAT FOREIGN KEY (PATIENT_ID) REFERENCES CMH.PATIENT(PATIENT_ID)');

    add_constraint_if_missing('CMH', 'DEPARTMENTS', 'CK_DEPT_ACT_YN',
        'ALTER TABLE CMH.DEPARTMENTS ADD CONSTRAINT CK_DEPT_ACT_YN CHECK (IS_ACTIVE IN (''Y'',''N''))');
    add_constraint_if_missing('CMH', 'POSITIONS', 'CK_POS_ACT_YN',
        'ALTER TABLE CMH.POSITIONS ADD CONSTRAINT CK_POS_ACT_YN CHECK (IS_ACTIVE IN (''Y'',''N''))');
    add_constraint_if_missing('CMH', 'STAFF_STATUS_CODES', 'CK_STFSTAT_ACT_YN',
        'ALTER TABLE CMH.STAFF_STATUS_CODES ADD CONSTRAINT CK_STFSTAT_ACT_YN CHECK (IS_ACTIVE IN (''Y'',''N''))');
    add_constraint_if_missing('CMH', 'STAFF_CREDENTIAL', 'CK_STFCRED_TYPE',
        'ALTER TABLE CMH.STAFF_CREDENTIAL ADD CONSTRAINT CK_STFCRED_TYPE CHECK (CRED_TYPE IN (''LICENSE'',''CERT''))');
    add_constraint_if_missing('CMH', 'STAFF_CREDENTIAL', 'CK_STFCRED_STATUS',
        'ALTER TABLE CMH.STAFF_CREDENTIAL ADD CONSTRAINT CK_STFCRED_STATUS CHECK (STATUS IN (''ACTIVE'',''EXPIRED'',''REVOKED''))');
    add_constraint_if_missing('CMH', 'STAFF_BOARD_POST', 'CK_STF_BOARD_CATEGORY',
        'ALTER TABLE CMH.STAFF_BOARD_POST ADD CONSTRAINT CK_STF_BOARD_CATEGORY CHECK (CATEGORY IN (''NOTICE'',''SCHEDULE'',''EVENT''))');
    add_constraint_if_missing('CMH', 'STAFF_BOARD_POST', 'CK_STF_BOARD_DEL_YN',
        'ALTER TABLE CMH.STAFF_BOARD_POST ADD CONSTRAINT CK_STF_BOARD_DEL_YN CHECK (IS_DELETED IN (''Y'',''N''))');
    add_constraint_if_missing('CMH', 'STAFF_COMMON_DOC', 'CK_STF_DOC_DEL_YN',
        'ALTER TABLE CMH.STAFF_COMMON_DOC ADD CONSTRAINT CK_STF_DOC_DEL_YN CHECK (IS_DELETED IN (''Y'',''N''))');
    add_constraint_if_missing('CMH', 'STAFF_COMMON_DOC', 'CK_STF_DOC_APPR_STATUS',
        'ALTER TABLE CMH.STAFF_COMMON_DOC ADD CONSTRAINT CK_STF_DOC_APPR_STATUS CHECK (APPROVAL_STATUS IN (''PENDING'',''APPROVED'',''REJECTED''))');
    add_constraint_if_missing('CMH', 'STAFF_COMMON_DOC_LINE', 'CK_STF_DOC_LINE_TYPE',
        'ALTER TABLE CMH.STAFF_COMMON_DOC_LINE ADD CONSTRAINT CK_STF_DOC_LINE_TYPE CHECK (LINE_TYPE IN (''APPROVAL'',''CC''))');
    add_constraint_if_missing('CMH', 'STAFF_COMMON_DOC_LINE', 'CK_STF_DOC_LINE_STATUS',
        'ALTER TABLE CMH.STAFF_COMMON_DOC_LINE ADD CONSTRAINT CK_STF_DOC_LINE_STATUS CHECK (ACTION_STATUS IN (''PENDING'',''APPROVED'',''REJECTED'',''READ''))');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER', 'CK_MED_ENC_ACTIVE',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER ADD CONSTRAINT CK_MED_ENC_ACTIVE CHECK (IS_ACTIVE IN (''Y'',''N''))');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER_ASSET', 'CK_MED_ENC_AST_TYPE',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER_ASSET ADD CONSTRAINT CK_MED_ENC_AST_TYPE CHECK (ASSET_TYPE IN (''PEN'',''IMAGE''))');
    add_constraint_if_missing('CMH', 'MEDICAL_ENCOUNTER_DIAGNOSIS', 'CK_MED_ENC_DIAG_PRIMARY',
        'ALTER TABLE CMH.MEDICAL_ENCOUNTER_DIAGNOSIS ADD CONSTRAINT CK_MED_ENC_DIAG_PRIMARY CHECK (IS_PRIMARY IN (''Y'',''N''))');
END;
/

DECLARE
    PROCEDURE create_seq_if_missing(p_owner IN VARCHAR2, p_seq IN VARCHAR2) IS
        v_cnt NUMBER;
    BEGIN
        SELECT COUNT(*)
          INTO v_cnt
          FROM ALL_SEQUENCES
         WHERE SEQUENCE_OWNER = UPPER(p_owner)
           AND SEQUENCE_NAME = UPPER(p_seq);

        IF v_cnt = 0 THEN
            EXECUTE IMMEDIATE 'CREATE SEQUENCE ' || p_owner || '.' || p_seq || ' START WITH 1 INCREMENT BY 1 NOCACHE';
        END IF;
    END;

    PROCEDURE create_seq_if_missing_start(p_owner IN VARCHAR2, p_seq IN VARCHAR2, p_start IN NUMBER) IS
        v_cnt NUMBER;
    BEGIN
        SELECT COUNT(*)
          INTO v_cnt
          FROM ALL_SEQUENCES
         WHERE SEQUENCE_OWNER = UPPER(p_owner)
           AND SEQUENCE_NAME = UPPER(p_seq);

        IF v_cnt = 0 THEN
            EXECUTE IMMEDIATE 'CREATE SEQUENCE ' || p_owner || '.' || p_seq || ' START WITH ' || p_start || ' INCREMENT BY 1 NOCACHE';
        END IF;
    END;

    PROCEDURE create_trigger_if_missing(p_owner IN VARCHAR2, p_trigger IN VARCHAR2, p_sql IN CLOB) IS
        v_cnt NUMBER;
    BEGIN
        SELECT COUNT(*) INTO v_cnt FROM ALL_TRIGGERS WHERE OWNER = UPPER(p_owner) AND TRIGGER_NAME = UPPER(p_trigger);
        IF v_cnt = 0 THEN
            EXECUTE IMMEDIATE p_sql;
        END IF;
    END;
BEGIN
    create_seq_if_missing('CMH', 'DEPT_SEQ');
    create_seq_if_missing('CMH', 'POSITION_SEQ');
    create_seq_if_missing('CMH', 'STAFF_SEQ');
    create_seq_if_missing('CMH', 'STAFF_CREDENTIAL_SEQ');
    create_seq_if_missing_start('CMH', 'STAFF_HISTORY_SEQ', 1000);
    create_seq_if_missing_start('CMH', 'STAFF_CHANGE_REQ_SEQ', 1000);
    create_seq_if_missing_start('CMH', 'STAFF_AUDIT_LOG_SEQ', 1000);
    create_seq_if_missing_start('CMH', 'STAFF_BOARD_POST_SEQ', 1000);
    create_seq_if_missing_start('CMH', 'STAFF_COMMON_DOC_SEQ', 1000);
    create_seq_if_missing_start('CMH', 'STAFF_COMMON_DOC_LINE_SEQ', 1000);
    create_seq_if_missing_start('CMH', 'VISIT_REG_SEQ', 1000);
    create_seq_if_missing_start('CMH', 'VISIT_HISTORY_SEQ', 1000);
    create_seq_if_missing_start('CMH', 'MEDICAL_ENCOUNTER_SEQ', 2000);
    create_seq_if_missing_start('CMH', 'MEDICAL_ENCOUNTER_HIS_SEQ', 2000);
    create_seq_if_missing_start('CMH', 'MEDICAL_ENC_DIAG_SEQ', 2000);
    create_seq_if_missing_start('CMH', 'MEDICAL_ENC_ASSET_SEQ', 2000);

    create_trigger_if_missing('CMH', 'TRG_DEPARTMENTS_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_DEPARTMENTS_ID
         BEFORE INSERT ON CMH.DEPARTMENTS
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.DEPT_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_POSITIONS_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_POSITIONS_ID
         BEFORE INSERT ON CMH.POSITIONS
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.POSITION_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_STAFF_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_STAFF_ID
         BEFORE INSERT ON CMH.STAFF
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.STAFF_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_STAFF_CREDENTIAL_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_STAFF_CREDENTIAL_ID
         BEFORE INSERT ON CMH.STAFF_CREDENTIAL
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.STAFF_CREDENTIAL_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_STAFF_HISTORY_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_STAFF_HISTORY_ID
         BEFORE INSERT ON CMH.STAFF_HISTORY
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.STAFF_HISTORY_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_STAFF_CHANGE_REQ_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_STAFF_CHANGE_REQ_ID
         BEFORE INSERT ON CMH.STAFF_CHANGE_REQUEST
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.STAFF_CHANGE_REQ_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_STAFF_AUDIT_LOG_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_STAFF_AUDIT_LOG_ID
         BEFORE INSERT ON CMH.STAFF_AUDIT_LOG
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.STAFF_AUDIT_LOG_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_VISIT_REG_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_VISIT_REG_ID
         BEFORE INSERT ON CMH.VISIT_REG
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.VISIT_REG_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_VISIT_HISTORY_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_VISIT_HISTORY_ID
         BEFORE INSERT ON CMH.VISIT_HISTORY
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.VISIT_HISTORY_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_MEDICAL_ENCOUNTER_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_MEDICAL_ENCOUNTER_ID
         BEFORE INSERT ON CMH.MEDICAL_ENCOUNTER
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.MEDICAL_ENCOUNTER_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_MED_ENC_HIS_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_MED_ENC_HIS_ID
         BEFORE INSERT ON CMH.MEDICAL_ENCOUNTER_HISTORY
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.MEDICAL_ENCOUNTER_HIS_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_MED_ENC_DIAG_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_MED_ENC_DIAG_ID
         BEFORE INSERT ON CMH.MEDICAL_ENCOUNTER_DIAGNOSIS
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.MEDICAL_ENC_DIAG_SEQ.NEXTVAL;
         END;');

    create_trigger_if_missing('CMH', 'TRG_MED_ENC_AST_ID',
        'CREATE OR REPLACE TRIGGER CMH.TRG_MED_ENC_AST_ID
         BEFORE INSERT ON CMH.MEDICAL_ENCOUNTER_ASSET
         FOR EACH ROW
         WHEN (NEW.ID IS NULL)
         BEGIN
           :NEW.ID := CMH.MEDICAL_ENC_ASSET_SEQ.NEXTVAL;
         END;');
END;
/
